// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword matches snapshot 1`] = `
<div>
  <nav
    class="SignInSignUpstyles__SignInSignUpHeader-sc-1q2n97q-0 fbuZcG"
  >
    <h1
      class="SignInSignUpstyles__SignInSignUpHeader__Logo-sc-1q2n97q-1 fEiWIn"
    >
      Trckr
    </h1>
    <div
      class="SignInSignUpstyles__SignInSignUpHeader__Items-sc-1q2n97q-2 gNrHgk"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Register
      </a>
    </div>
  </nav>
  <div
    class="SignInSignUpstyles__SignInSignUpContainer-sc-1q2n97q-3 gTvMFl"
  >
    <h2
      class="SignInSignUpstyles__SignInSignUpText-sc-1q2n97q-4 PNfTB"
    >
      Reset your password here, 
      <br />
      <span>
        just type your email
      </span>
    </h2>
    <form
      class="SignInSignUpstyles__SignInSignUpForm-sc-1q2n97q-5 gQpXzR"
    >
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <input
          placeholder="Email address"
          type="email"
          value=""
        />
      </div>
      <button
        class="SignInSignUpstyles__SignInSignUpForm__Button-sc-1q2n97q-7 guaMLz"
      >
        Send
      </button>
    </form>
    
  </div>
</div>
`;

exports[`ResetPassword matches snapshot 1`] = `
<div>
  <nav
    class="SignInSignUpstyles__SignInSignUpHeader-sc-1q2n97q-0 fbuZcG"
  >
    <h1
      class="SignInSignUpstyles__SignInSignUpHeader__Logo-sc-1q2n97q-1 fEiWIn"
    >
      Trckr
    </h1>
    <div
      class="SignInSignUpstyles__SignInSignUpHeader__Items-sc-1q2n97q-2 gNrHgk"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Register
      </a>
    </div>
  </nav>
  <div
    class="SignInSignUpstyles__SignInSignUpContainer-sc-1q2n97q-3 gTvMFl"
  >
    <h2
      class="SignInSignUpstyles__SignInSignUpText-sc-1q2n97q-4 PNfTB"
    >
      Set your new password,
      <br />
      <span>
        make it sticky this time
      </span>
    </h2>
    <form
      class="SignInSignUpstyles__SignInSignUpForm-sc-1q2n97q-5 gQpXzR"
    >
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <input
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <button
        class="SignInSignUpstyles__SignInSignUpForm__Button-sc-1q2n97q-7 guaMLz"
      >
        Update
      </button>
    </form>
    
  </div>
</div>
`;

exports[`SignIn matches snapshot 1`] = `
<div>
  <nav
    class="SignInSignUpstyles__SignInSignUpHeader-sc-1q2n97q-0 fbuZcG"
  >
    <h1
      class="SignInSignUpstyles__SignInSignUpHeader__Logo-sc-1q2n97q-1 fEiWIn"
    >
      Trckr
    </h1>
    <div
      class="SignInSignUpstyles__SignInSignUpHeader__Items-sc-1q2n97q-2 gNrHgk"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Register
      </a>
    </div>
  </nav>
  <div
    class="SignInSignUpstyles__SignInSignUpContainer-sc-1q2n97q-3 gTvMFl"
  >
    <h2
      class="SignInSignUpstyles__SignInSignUpText-sc-1q2n97q-4 PNfTB"
    >
      Welcome back, 
      <br />
      <span>
        sign in to continue
      </span>
    </h2>
    <form
      class="SignInSignUpstyles__SignInSignUpForm-sc-1q2n97q-5 gQpXzR"
    >
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <input
          placeholder="Email address"
          type="email"
          value=""
        />
      </div>
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <div
          class="input-wrapper"
        >
          <input
            placeholder="Password"
            type="password"
            value=""
          />
          <svg>
            eye.svg
          </svg>
        </div>
        <p>
          <a
            href="/forgot"
          >
            Forgot password?
          </a>
        </p>
      </div>
      <button
        class="SignInSignUpstyles__SignInSignUpForm__Button-sc-1q2n97q-7 guaMLz"
      >
        Login
      </button>
    </form>
  </div>
</div>
`;

exports[`SignUp matches snapshot 1`] = `
<div>
  <nav
    class="SignInSignUpstyles__SignInSignUpHeader-sc-1q2n97q-0 fbuZcG"
  >
    <h1
      class="SignInSignUpstyles__SignInSignUpHeader__Logo-sc-1q2n97q-1 fEiWIn"
    >
      Trckr
    </h1>
    <div
      class="SignInSignUpstyles__SignInSignUpHeader__Items-sc-1q2n97q-2 gNrHgk"
    >
      <a
        aria-current="page"
        class="active"
        href="/"
      >
        Sign In
      </a>
      <a
        href="/signup"
      >
        Register
      </a>
    </div>
  </nav>
  <div
    class="SignInSignUpstyles__SignInSignUpContainer-sc-1q2n97q-3 gTvMFl"
  >
    <h2
      class="SignInSignUpstyles__SignInSignUpText-sc-1q2n97q-4 PNfTB"
    >
      Hey there, 
      <br />
      <span>
        sign up to continue
      </span>
    </h2>
    <form
      class="SignInSignUpstyles__SignInSignUpForm-sc-1q2n97q-5 gQpXzR"
    >
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <input
          placeholder="Name"
          required=""
          type="text"
          value=""
        />
      </div>
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <input
          placeholder="Email address"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="SignInSignUpstyles__SignInSignUpForm__Input-sc-1q2n97q-6 fGIiv"
      >
        <div
          class="input-wrapper"
        >
          <input
            placeholder="Password"
            required=""
            type="password"
            value=""
          />
          <svg>
            eye.svg
          </svg>
        </div>
      </div>
      <button
        class="SignInSignUpstyles__SignInSignUpForm__Button-sc-1q2n97q-7 guaMLz"
      >
        Sign Up
      </button>
    </form>
    
  </div>
</div>
`;
